# api/app/api/models.py
@@ -1,22 +1,17 @@
 from pydantic import BaseModel
-from enum import Enum
+from typing import List, Optional
 from datetime import datetime
-from typing import Dict, Optional, Union, Any
-from api.app.database.models import TeamOrm, UserOrm
+from enum import Enum
 
-
-class StatisticPeriods(str, Enum):
-    DAY_STATISTICS_PERIOD = "day"
-    WEEK_STATISTICS_PERIOD = "week"
-    MONTH_STATISTICS_PERIOD = "month"
-
+class AuthPrivileges(str, Enum):
+    USER = "Пользователь"
+    ADMIN = "Администратор"
 
 class UserTypes(str, Enum):
     COMMERCIAL = "Риелтор коммерческой недвижимости"
     PRIVATE = "Риелтор частной недвижимости"
 
-
-class WorkTasksTypes(str, Enum):
+class WorkTypes(str, Enum):
     FLYERS = "Рассклейка"
     CALLS = "Обзвон"
     SHOW = "Показ объекта"
@@ -30,76 +25,81 @@ class WorkTasksTypes(str, Enum):
     REGULAR_CONTRACT = "Обычный договор"
     EXCLUSIVE_CONTRACT = "Эксклюзивный договор"
 
+class KpiLevels(str, Enum):
+    TRAINEE = "Стажер"
+    SPECIALIST = "Специалист"
+    EXPERT = "Эксперт"
+    TOP = "ТОП"
 
-class Image(BaseModel):
-    id: str
-    name: str
-    data: bytes
-
-
-class User(BaseModel):
-    id: str
-    login: str
-    password: str
-    type: UserTypes
-    email: str
-    reg_date: int
-    name: str
-    gender: Optional[str]
-    birthday: Optional[int]
-    phone: Optional[str]
-    image: Optional[str]
-
-
-class AuthData(BaseModel):
-    login: str
-    password: str
-
-
-class Note(BaseModel):
-    id: str
-    title: str
-    desc: Optional[str]
-    date_time: int
-    user_id: str
-    notification_id: int
-
-
-class Task(BaseModel):
-    id: str
-    work_type: WorkTasksTypes
-    date_time: int
-    desc: Optional[str]
-    duration_seconds: int
-    user_id: str
-    notification_id: int
-    is_completed: bool
-
-
-class Team(BaseModel):
-    id: str
-    name: str
-    created_date_time: datetime
-
+class StatisticPeriod(str, Enum):
+    DAY = "День"
+    WEEK = "Неделя"
+    MONTH = "Месяц"
 
 class UserStatuses(str, Enum):
     OWNER = "Владелец"
     USER = "Участник"
 
+class UserCredentials(BaseModel):
+    id: str
+    login: str
+    password: str
+    privileges: AuthPrivileges
+    created_at: datetime
+    is_active: bool
+
+class Token(BaseModel):
+    id: str
+    user_id: str
+    token: str
+    is_regular: bool
+
+class File(BaseModel):
+    id: str
+    obj_key: str
+    obj_name: str
+    bucket_name: str
+
+class User(BaseModel):
+    id: str
+    type: UserTypes
+    email: str
+    name: str
+    gender: Optional[str]
+    birthday: Optional[int]
+    phone: Optional[str]
+    image: str
+
+class Note(BaseModel):
+    id: str
+    user_id: str
+    title: str
+    description: Optional[str]
+    created_at: int
+
+class Task(BaseModel):
+    id: str
+    user_id: str
+    work_type: WorkTypes
+    description: Optional[str]
+    created_at: int
+    duration_seconds: int
+    is_completed: bool
+
+class Team(BaseModel):
+    id: str
+    name: str
+    created_at: int
 
 class UserTeam(BaseModel):
     team_id: str
     user_id: str
     role: UserStatuses
-    
-    
-class Statistics(BaseModel):
-    user_id: str
-    data: int
 
-
-class StatisticsViaOrm(BaseModel):
+class Statistic(BaseModel):
+    id: str
     user_id: str
+    period_type: StatisticPeriod
     flyers: int
     calls: int
     shows: int
@@ -113,78 +113,26 @@ class StatisticsViaOrm(BaseModel):
     regular_contracts: int
     exclusive_contracts: int
 
-
-class AddresInfo(BaseModel):
-    record_id: str
+class Address(BaseModel):
+    id: str
     user_id: str
     address: str
     lat: float
     lon: float
     date_time: int
 
-
-class UserKpiLevels(str, Enum):
-    TRAINEE = "Стажер"
-    SPECIALIST = "Специалист"
-    EXPERT = "Эксперт"
-    TOP = "ТОП"
-
-
-class LastMonthStatisticsWithKpi(BaseModel):
+class Kpi(BaseModel):
     user_id: str
-    flyers: int
-    calls: int 
-    shows: int 
-    meets: int 
-    deals_rent: int
-    deals_sale: int
-    deposits: int 
-    searches: int 
-    analytics: int 
-    others: int 
-    regular_contracts: int
-    exclusive_contracts: int
-    user_level: UserKpiLevels
+    user_level: KpiLevels
     salary_percentage: float
 
-
-class SummaryStatisticsWithLevel(BaseModel):
+class Call(BaseModel):
+    id: str
     user_id: str
-    deals_rent: int
-    deals_sale: int
-    base_percent: float
-    user_level: UserKpiLevels
-
-
-class CallsRecords(BaseModel):
-    user_id: str
-    name: str
-    data: bytes | None
-
-
-class UsersCalls(BaseModel):
-    user_id: str
-    record_id: str
-    info: str | None
     date_time: int
     phone_number: str
     contact_name: str
     length_seconds: int
     call_type: int
     transcription: str
-
-
-class UserWithStats:
-    def __init__(self, user: UserOrm, statistics: Dict[StatisticPeriods, Union[None, StatisticsViaOrm]], addresses: list[Any], calls: list[Any], role: UserStatuses, kpi: LastMonthStatisticsWithKpi):
-        self.user = user
-        self.statistics = statistics
-        self.addresses = addresses
-        self.calls = calls
-        self.role = role
-        self.kpi = kpi
-
-
-class TeamWithInfo:
-    def __init__(self, team: TeamOrm, members: list[UserWithStats]):
-        self.team = team
-        self.members = members
+    file_id: str
