# auth/internal/server/utils.go
@@ -1,12 +1,0 @@
-package server
-
-import models "auth/internal/models"
-
-func IsUserInRole(roles []models.Role, roleId string) bool {
-	for _, role := range roles {
-		if role.Id == roleId {
-			return true
-		}
-	}
-	return false
-}
